Fix dark mode bug with math elements in Wikipedia pop-frames

--- a/css/include/dark-mode-GENERATED.css
+++ b/css/include/dark-mode-GENERATED.css
@@ -594,3 +594,10 @@ a[data-link-icon-type*='svg']::after {
 .footnotes .footnote-back img:hover {
     filter: invert(1);
 }
+
+
+/*	Math in Wikipedia pop-frames.
+ */
+.popframe-body.wikipedia-entry .mwe-math-element img {
+	filter: invert(1);
+}
